// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hidden when \`true\` arg: renders correctly 1`] = `
<form>
  <div
    aria-hidden={true}
    className="sr-only"
    tabIndex={-1}
  >
    Inner Text 
    <input
      type="text"
    />
  </div>
</form>
`;

exports[`hidden when no arg: renders correctly 1`] = `
<form>
  <div
    aria-hidden={true}
    className="sr-only"
    tabIndex={-1}
  >
    Inner Text 
    <input
      type="text"
    />
  </div>
</form>
`;

exports[`not hidden when \`false\` arg: renders correctly 1`] = `
<form>
  <div
    aria-hidden={false}
    className=""
  >
    Inner Text 
    <input
      type="text"
    />
  </div>
</form>
`;
